# aichive

./: .gitignore  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  interceptor_storage.db  pyproject.toml  sitecustomize.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: ADR-0001-interceptor-arch.md  systemd-and-cron.md
interceptor/: __init__.py  chunker.py  cli.py  code_compress.py  compact.py  compaction_inspect.py  compaction_worker.py  config.yaml  db.py  demo_adaptive.py  embeddings.py  export.py  export_parquet.py  faiss.index  faiss_index.py  faiss_map.json  faiss_map_meta.json  gain.py  ingest_worker.py  mcp_app.py  mcp_server.py  metrics.py  mitm_addon.py  provider.py  recall.py  redact.py  redact_cli.py  redact_policy.py  requirements.txt  retention.py  scheduler.py  search.py  token_compact.py  tokenize_worker.py
scripts/: import_mitm_ca.sh  proxy_request.sh  run_in_docker.sh
tests/: conftest.py  test_code_compress.py  test_compaction_worker.py  test_db.py  test_export.py  test_faiss_search.py  test_gc_refcount.py  test_provider.py  test_redact.py  test_token_compact.py
